work around the timezone information being seemingly wrong